--- a/.github/workflows/update-notes.yml
+++ b/.github/workflows/update-notes.yml
@@ -34,21 +34,21 @@ jobs:
             echo "Notes repository already exists."
           fi
 
-      # 3. 检查子仓库是否有新提交
+      # 3. 检查子仓库是否有新提交（第一次克隆也会触发更新）
       - name: Check for new commits in notes repository
         id: check_updates
         working-directory: ./0101
         run: |
           git fetch origin main
-          LOCAL_SHA=$(git rev-parse HEAD || echo "none")
-          REMOTE_SHA=$(git rev-parse origin/main || echo "none")
+          LOCAL_SHA=$(git rev-parse HEAD 2>/dev/null || echo "none")
+          REMOTE_SHA=$(git rev-parse origin/main 2>/dev/null || echo "none")
 
-          if [ "$LOCAL_SHA" = "$REMOTE_SHA" ]; then
+          if [ "$LOCAL_SHA" = "none" ] || [ "$LOCAL_SHA" != "$REMOTE_SHA" ]; then
+            echo "第一次运行或检测到笔记仓库有新 commit。"
+            echo "has_changes=true" >> $GITHUB_OUTPUT
+          else
             echo "笔记仓库无更新。"
             echo "has_changes=false" >> $GITHUB_OUTPUT
-          else
-            echo "检测到笔记仓库有新 commit。"
-            echo "has_changes=true" >> $GITHUB_OUTPUT
           fi
 
       # 4. 安装 Node.js（始终安装，避免第一次运行出错）
