--- a/.github/workflows/update-notes.yml
+++ b/.github/workflows/update-notes.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add -A 0101 assets/data/notes-tree.json articles
+          git add -A 0101 assets/data/notes-tree.json articles sitemap.xml
           if git diff --cached --quiet; then
             echo "No changes to commit"
           else
